--- a/css/realisations.css
+++ b/css/realisations.css
@@ -24,6 +24,7 @@
 .realisations .square .realisation img {
   width: 100%;
   height: 390px;
+  object-fit: cover;
 }
 
 .realisations .rectangle {
@@ -37,6 +38,7 @@
 .realisations .rectangle .realisation img {
   width: 100%;
   height: 800px;
+  object-fit: cover;
 }
 
 @media (max-width: 1025px) {
