--- a/css/contact.css
+++ b/css/contact.css
@@ -17,6 +17,14 @@
   width: 400px;
 }
 
+.contact .formulaire .btn-contact button {
+  background-color: transparent;
+  margin-top: 3vh;
+  border: 1px solid white;
+  color: white;
+}
+
+
 .contact .formulaire h3,
 .contact .coordonnee h3 {
   font-size: 2.25rem;
